# cargo-packager

./: .gitignore  .npmrc  .prettierignore  Cargo.toml  LICENSE.spdx  README.md  SECURITY.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.changes/: add-pacman-support.md  (+91 more)
bindings/packager/nodejs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  generate-config-type.js  index.d.ts  index.js  main.d.ts  main.js  package.json  packager.js  pnpm-lock.yaml  schema.json  tsconfig.json
bindings/packager/nodejs/__test__/: index.spec.mjs
bindings/packager/nodejs/npm/darwin-arm64/: README.md  package.json
bindings/packager/nodejs/npm/darwin-x64/: README.md  package.json
bindings/packager/nodejs/npm/linux-arm-gnueabihf/: README.md  package.json
bindings/packager/nodejs/npm/linux-arm64-gnu/: README.md  package.json
bindings/packager/nodejs/npm/linux-arm64-musl/: README.md  package.json
bindings/packager/nodejs/npm/linux-x64-gnu/: README.md  package.json
bindings/packager/nodejs/npm/linux-x64-musl/: README.md  package.json
bindings/packager/nodejs/npm/win32-arm64-msvc/: README.md  package.json
bindings/packager/nodejs/npm/win32-ia32-msvc/: README.md  package.json
bindings/packager/nodejs/npm/win32-x64-msvc/: README.md  package.json
bindings/packager/nodejs/plugins/: electron.js  index.js
bindings/packager/nodejs/src/: lib.rs
bindings/packager/nodejs/src-ts/: config.d.ts  index.ts
bindings/packager/nodejs/src-ts/plugins/: electron.ts  index.ts
bindings/resource-resolver/nodejs/: CHANGELOG.md  Cargo.toml  README.md  fix-types.js  index.d.ts  index.js  package.json
bindings/resource-resolver/nodejs/__test__/: index.spec.mjs
bindings/resource-resolver/nodejs/npm/darwin-arm64/: README.md  package.json
bindings/resource-resolver/nodejs/npm/darwin-x64/: README.md  package.json
bindings/resource-resolver/nodejs/npm/linux-arm-gnueabihf/: README.md  package.json
bindings/resource-resolver/nodejs/npm/linux-arm64-gnu/: README.md  package.json
bindings/resource-resolver/nodejs/npm/linux-arm64-musl/: README.md  package.json
bindings/resource-resolver/nodejs/npm/linux-x64-gnu/: README.md  package.json
bindings/resource-resolver/nodejs/npm/linux-x64-musl/: README.md  package.json
bindings/resource-resolver/nodejs/npm/win32-arm64-msvc/: README.md  package.json
bindings/resource-resolver/nodejs/npm/win32-ia32-msvc/: README.md  package.json
bindings/resource-resolver/nodejs/npm/win32-x64-msvc/: README.md  package.json
bindings/resource-resolver/nodejs/src/: lib.rs
bindings/updater/nodejs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json
bindings/updater/nodejs/__test__/: index.spec.mjs
bindings/updater/nodejs/__test__/app/: index.html  main.js  package.json  preload.js
bindings/updater/nodejs/npm/darwin-arm64/: README.md  package.json
bindings/updater/nodejs/npm/darwin-x64/: README.md  package.json
bindings/updater/nodejs/npm/linux-arm-gnueabihf/: README.md  package.json
bindings/updater/nodejs/npm/linux-arm64-gnu/: README.md  package.json
bindings/updater/nodejs/npm/linux-arm64-musl/: README.md  package.json
bindings/updater/nodejs/npm/linux-x64-gnu/: README.md  package.json
bindings/updater/nodejs/npm/linux-x64-musl/: README.md  package.json
bindings/updater/nodejs/npm/win32-arm64-msvc/: README.md  package.json
bindings/updater/nodejs/npm/win32-ia32-msvc/: README.md  package.json
bindings/updater/nodejs/npm/win32-x64-msvc/: README.md  package.json
bindings/updater/nodejs/src/: from_impls.rs  lib.rs
crates/config/: CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md  schema.json
crates/config-schema-generator/: Cargo.toml  build.rs
crates/config-schema-generator/src/: main.rs
crates/config/src/: category.rs  lib.rs
crates/config_schema_generator/: Cargo.toml  build.rs
crates/packager/: CHANGELOG.md  Cargo.toml  README.md  build.rs  schema.json
crates/packager/src/: config.rs  error.rs  lib.rs  main.rs  shell.rs  sign.rs  util.rs
crates/packager/src/app/: mod.rs
crates/packager/src/appimage/: mod.rs
crates/packager/src/cli/: config.rs  error.rs  mod.rs
crates/packager/src/cli/signer/: generate.rs  mod.rs  sign.rs
crates/packager/src/codesign/: macos.rs  mod.rs  windows.rs
crates/packager/src/config/: builder.rs  category.rs  mod.rs
crates/packager/src/deb/: mod.rs
crates/packager/src/dmg/: mod.rs
crates/packager/src/ios/: mod.rs
crates/packager/src/msi/: mod.rs
crates/packager/src/nsis/: installer.nsi  mod.rs
crates/packager/src/nsis/languages/: Arabic.nsh  English.nsh  Japanese.nsh  Persian.nsh  PortugueseBR.nsh  SimpChinese.nsh  SpanishInternational.nsh  Swedish.nsh  TradChinese.nsh  Turkish.nsh
crates/packager/src/package/: context.rs  mod.rs
crates/packager/src/rpm/: mod.rs
crates/packager/src/sign/: macos.rs  mod.rs
crates/packager/src/wix/: main.wxs  mod.rs  uninstall-task.ps1  update-task.xml
crates/resource-resolver/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/resource-resolver/src/: error.rs  lib.rs  platform.rs  starting_binary.rs
crates/updater/: CHANGELOG.md  Cargo.toml  README.md
crates/updater-service/: Cargo.toml
crates/updater-service/src/: main.rs
crates/updater/src/: current_exe.rs  custom_serialization.rs  error.rs  lib.rs
crates/updater/tests/: dummy.key  dummy.pub.key  update.rs
crates/updater/tests/app/: Cargo.toml
crates/utils/: CHANGELOG.md  Cargo.toml  README.md
crates/utils/src/: current_exe.rs  lib.rs
examples/deno/: Cargo.toml  README.md  packager.json
examples/dioxus/: Cargo.toml  README.md
examples/dioxus/src/: main.rs
examples/egui/: Cargo.toml  README.md
examples/egui/src/: main.rs
examples/slint/: Cargo.toml  README.md  build.rs
examples/slint/src/: main.rs
examples/slint/ui/: appwindow.slint
examples/tauri/: .gitignore  Cargo.toml  README.md  dummy.key  tauri.conf.json
examples/tauri/capabilities/: base.json
examples/tauri/src/: main.rs
examples/tauri/src-ui/: main.js
examples/wry/: Cargo.toml  README.md
examples/wry/src/: main.rs
(+60 files in other folders)
