[workspace]
members = ["crates/*", "examples/*"]
exclude = ["examples/deno", "examples/wails"]
resolver = "2"

[workspace.package]
authors = ["CrabNebula Ltd."]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/crabnebula-dev/cargo-packager"

[workspace.dependencies]
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dunce = "1"
schemars = { version = "0.8", features = ["url", "preserve_order", "derive"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
semver = "1"
base64 = "0.21"
tracing = "0.1"
time = "0.3"
tar = "0.4"
