[workspace]
members = [
    "crates/*",
    "examples/*",
    "bindings/*/nodejs",
    "crates/updater/tests/app",
]
exclude = ["examples/deno", "examples/wails", "examples/electron"]
resolver = "2"

[workspace.package]
authors = ["CrabNebula Ltd."]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/crabnebula-dev/cargo-packager"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dunce = "1"
schemars = { version = "0.8", features = ["url", "preserve_order", "derive"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
semver = "1"
base64 = "0.22"
tracing = "0.1"
time = "0.3"
tar = "0.4"
napi = { version = "2.16", default-features = false }
napi-derive = "2.16"
napi-build = "2.1"
cargo-packager = { path = "crates/packager", default-features = false }
cargo-packager-resource-resolver = { path = "crates/resource-resolver" }
cargo-packager-updater = { path = "crates/updater", default-features = false }
cargo-packager-utils = { version = "0.1.1", path = "crates/utils", default-features = false }
cargo_metadata = "0.18"
ctor = "0.2"
dioxus = "0.5"
eframe = "0.27"
flate2 = "1.0"
glob = "0.3"
handlebars = "5.1"
heck = "0.5"
hex = "0.4"
http = "1"
icns = "0.1"
image = "0.25"
log = "0.4"
minisign = "0.7"
minisign-verify = "0.2"
native-tls = "0.2"
os_pipe = "1"
plist = "1"
relative-path = "1.9"
reqwest = { version = "0.12", default-features = false }
sha1 = "0.10"
sha2 = "0.10"
slint = "1.7"
slint-build = "1.7"
strsim = "0.11"
tao = "0.30"
tauri = "=2.0.0-rc.9"
tauri-build = "=2.0.0-rc.8"
tauri-macros = "=2.0.0-rc.7"
tauri-utils = "=2.0.0-rc.8"
tempfile = "3.12"
tiny_http = "0.12"
toml = "0.8"
tracing-subscriber = "0.3"
ureq = { version = "2.10", default-features = false }
url = "2"
walkdir = "2"
wry = "0.43"
zip = { version = "0.6", default-features = false }

[profile.release-size-optimized]
inherits = "release"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
