[workspace]
members = [
    "crates/*",
    "examples/*",
    "bindings/*/nodejs",
    "crates/updater/tests/app",
]
exclude = ["examples/deno", "examples/wails", "examples/electron"]
resolver = "2"

[workspace.package]
authors = ["CrabNebula Ltd."]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/crabnebula-dev/cargo-packager"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dunce = "1"
schemars = { version = "0.9", features = ["url", "preserve_order", "derive"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
semver = "1"
base64 = "0.22"
tracing = "0.1"
time = "0.3"
tar = "0.4"
napi = { version = "2.16", default-features = false }
napi-derive = "2.16"
napi-build = "2.1"

[profile.release-size-optimized]
inherits = "release"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
