[package]
name = "cargo-packager-config-schema-generator"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
cargo-packager = { workspace = true, features = ["schema"] }
serde_json = { workspace = true }
schemars = { workspace = true }
