[package]
name = "cargo-packager-config"
version = "0.0.0"
description = "Config types for cargo-packager."
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/crabnebula-dev/cargo-packager"

[features]
clap = ["dep:clap"]

[dependencies]
serde.workspace = true
schemars.workspace = true
clap = { workspace = true, optional = true }
strsim = "0.10"
