[package]
name = "cargo-packager"
version = "0.4.0"
description = "Executable packager and bundler distributed as a CLI and library."
authors = [
  "CrabNebula Ltd.",
  "Tauri Programme within The Commons Conservancy",
  "George Burton <burtonageo@gmail.com>"
]
keywords = [ "bundle", "package", "cargo" ]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "development-tools::cargo-plugins",
  "development-tools::build-utils",
  "os"
]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg", "doc_cfg" ]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin"
]

[features]
default = [ "cli", "rustls-tls" ]
cli = [ "clap", "dep:tracing-subscriber" ]
schema = [ "schemars" ]
native-tls = [ "ureq/native-tls" ]
native-tls-vendored = [ "native-tls", "native-tls/vendored" ]
rustls-tls = [ "ureq/tls" ]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dunce = { workspace = true }
dirs = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, optional = true, features = [ "env" ] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", optional = true, features = [ "env-filter" ] }
toml = "0.8"
cargo_metadata = "0.18"
ureq = { version = "2.9", default-features = false }
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = [ "deflate" ] }
handlebars = "4.5"
glob = "0.3"
relative-path = "1.9"
walkdir = "2"
os_pipe = "1"
minisign = "0.7"
tar = { workspace = true }
libflate = "2.0"
strsim = "0.10"
schemars = { workspace = true, optional = true }
native-tls = { version = "0.2", optional = true }

[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.52"
once_cell = "1.19"
uuid = { version = "1", features = [ "v4", "v5" ] }
regex = "1.10"

  [target."cfg(target_os = \"windows\")".dependencies.windows-sys]
  version = "0.52"
  features = [
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_Debug"
]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"netbsd\", target_os = \"openbsd\"))".dependencies]
image = "0.24"
md5 = "0.7"
heck = "0.4"
ar = "0.9"

[target."cfg(target_os = \"macos\")".dependencies]
icns = { package = "tauri-icns", version = "0.1" }
time = { workspace = true, features = [ "formatting" ] }
plist = "1"
image = "0.24"
tempfile = "3"
