[package]
name = "cargo-packager"
version = "0.11.4"
description = "Executable packager and bundler distributed as a CLI and library."
authors = [
    "CrabNebula Ltd.",
    "Tauri Programme within The Commons Conservancy",
    "George Burton <burtonageo@gmail.com>",
]
keywords = ["bundle", "package", "cargo"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools::cargo-plugins",
    "development-tools::build-utils",
    "os",
]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "cargo-packager"
# path = "src/bins/cli.rs"
required-features = ["cli"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
]

[lints.rust]
# cfg(doc_cfg) is used for docs.rs detection. see above
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }

[features]
default = ["cli", "rustls-tls"]
cli = ["clap", "dep:tracing-subscriber"]
schema = ["schemars", "cargo-packager-utils/schema"]
clap = ["dep:clap", "cargo-packager-utils/clap"]
native-tls = ["ureq/native-tls"]
native-tls-vendored = ["native-tls", "native-tls/vendored"]
rustls-tls = ["ureq/tls"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dunce = { workspace = true }
dirs = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, optional = true, features = ["env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
toml = { workspace = true }
cargo_metadata = { workspace = true }
ureq = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true, features = ["deflate"] }
handlebars = { workspace = true }
glob = { workspace = true }
relative-path = { workspace = true }
walkdir = { workspace = true }
os_pipe = { workspace = true }
minisign = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
strsim = { workspace = true }
schemars = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }
cargo-packager-utils = { workspace = true, features = ["serde"] }
icns = { package = "tauri-icns", version = "0.1" }
time = { workspace = true, features = ["formatting"] }
image = { workspace = true }
tempfile = { workspace = true }
plist = { workspace = true }

[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.52"
once_cell = "1.19"
uuid = { version = "1", features = ["v4", "v5"] }
regex = "1.10"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.52"
features = ["Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug"]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"netbsd\", target_os = \"openbsd\"))".dependencies]
image = "0.25"
md5 = "0.7"
heck = "0.5"
ar = "0.9"
