[package]
name = "cargo-packager-resource-resolver"
description = "Cargo packager resource resolver"
version = "0.1.2"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = [ "auto-detect-format" ]

[dependencies]
thiserror = { workspace = true }
cargo-packager-utils = { version = "0.1.1", path = "../utils", default-features = false }
log = "0.4"
heck = "0.5"

[features]
process-relaunch-dangerous-allow-symlink-macos = [ "cargo-packager-utils/process-relaunch-dangerous-allow-symlink-macos" ]
auto-detect-format = [ ]
