[package]
name = "cargo-packager-resource-resolver"
description = "Cargo packager resource resolver"
version = "0.1.2"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = [ "auto-detect-format" ]

[dependencies]
thiserror = { workspace = true }
cargo-packager-utils = { workspace = true }
log = { workspace = true }
heck = { workspace = true }

[features]
process-relaunch-dangerous-allow-symlink-macos = [ "cargo-packager-utils/process-relaunch-dangerous-allow-symlink-macos" ]
auto-detect-format = [ ]
