[package]
name = "cargo-packager-updater-service"
version = "0.0.0"
description = "Executable updater service."
authors = ["CrabNebula Ltd."]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["cargo-packager-updater/rustls-tls"]
native-tls = ["cargo-packager-updater/native-tls"]
native-tls-vendored = ["cargo-packager-updater/native-tls-vendored"]

[dependencies]
cargo-packager-updater = { path = "../updater", default-features = false }
dunce = { workspace = true }
serde_json = { workspace = true }
winreg = "0.52.0"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_EventLog",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Globalization",
]
