[package]
name = "cargo-packager-updater"
version = "0.1.1"
description = "Rust executable updater."
authors = [
  "CrabNebula Ltd.",
  "Tauri Programme within The Commons Conservancy"
]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
process-relaunch-dangerous-allow-symlink-macos = [ ]
native-tls = [ "reqwest/native-tls" ]
native-tls-vendored = [ "reqwest/native-tls-vendored" ]
rustls-tls = [ "reqwest/rustls-tls" ]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [ "json", "stream", "blocking" ] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dunce = { workspace = true }
dirs = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }
time = { workspace = true, features = [ "parsing", "formatting" ] }
http = "0.2"
url = { version = "2.5", features = [ "serde" ] }
minisign-verify = "0.2"
ctor = "0.2"
tempfile = "3.8"

[target."cfg(target_os = \"macos\")".dependencies]
tar = { workspace = true }
flate2 = "1.0"

[dev-dependencies]
tiny_http = "0.12"
