[package]
name = "cargo-packager-updater"
version = "0.2.2"
description = "Rust executable updater."
authors = ["CrabNebula Ltd.", "Tauri Programme within The Commons Conservancy"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["rustls-tls"]
process-relaunch-dangerous-allow-symlink-macos = [
  "cargo-packager-utils/process-relaunch-dangerous-allow-symlink-macos",
]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls-native-roots"]

[dependencies]
cargo-packager-utils = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "blocking"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dunce = { workspace = true }
dirs = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }
time = { workspace = true, features = ["parsing", "formatting"] }
http = { workspace = true }
url = { workspace = true, features = ["serde"] }
minisign-verify = { workspace = true }
ctor = { workspace = true }
tempfile = { workspace = true }

[target."cfg(target_os = \"macos\")".dependencies]
tar = { workspace = true }
flate2 = "1.0"

[dev-dependencies]
tiny_http = { workspace = true }
