[package]
name = "cargo-packager-utils"
description = "Utilities for cargo-packager crates"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ctor = "0.2"
schemars = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = [ "cli" ]
cli = [ ]
schema = [ "schemars" ]
clap = [ "dep:clap" ]
serde = [ "dep:serde" ]
process-relaunch-dangerous-allow-symlink-macos = []
