[package]
name = "dioxus-example"
version = "0.0.0"
edition = "2021"

[package.metadata.packager]
before-packaging-command = "dx build --platform desktop --release"
product-name = "Dioxus example"
identifier = "com.dioxus.example"
resources = ["src/**/*"]

[package.metadata.packager.deb]
depends = ["libgtk-3-0", "libwebkit2gtk-4.1-0", "libayatana-appindicator3-1"]

[dependencies]
dioxus = "0.4"
dioxus-desktop = "0.4"
