[package]
name = "egui-example"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
eframe = "0.27"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Egui example"
identifier = "com.egui.example"
resources = ["Cargo.toml", "src", "32x32.png"]
icons = ["32x32.png"]
