[package]
name = "slint-example"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
slint = "1.7"

[build-dependencies]
slint-build = "1.7"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Slint example"
identifier = "com.slint.example"
resources = ["Cargo.toml", "src", "32x32.png"]
icons = ["32x32.png"]
