[package]
name = "tauri-example"
version = "0.0.0"
edition = "2021"

[package.metadata.packager]
before-packaging-command = "cargo tauri build"
product-name = "Tauri example"
identifier = "com.tauri.example"
resources = [
    "Cargo.toml",
    "README.md",
    "icons/*",
    "src",
    { src = "src-ui", target = "public" },
]
icons = [
    "icons/32x32.png",
    "icons/128x128.png",
    "icons/128x128@2x.png",
    "icons/icon.icns",
    "icons/icon.ico",
]

[package.metadata.packager.deb]
depends = ["libgtk-3-0", "libwebkit2gtk-4.1-0", "libayatana-appindicator3-1"]

[build-dependencies]
tauri-build = { version = "=2.0.0-alpha.6", features = [] }

[dependencies]
tauri = { version = "=2.0.0-alpha.10", features = [] }
tauri-utils = { version = "=2.0.0-alpha.6", features = [] }
tauri-macros = "=2.0.0-alpha.6"
serde.workspace = true
serde_json.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
