[package]
edition = "2021"
name = "crabnebula_packager"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
cargo-packager = { path = "../../../crates/packager/" }
tracing = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"
