[package]
name = "crabnebula_packager"
version = "0.0.0"
publish = false
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }
cargo-packager = { path = "../../../crates/packager/", version = "0.3.0", default-features = false, features = ["cli"] }
tracing = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[features]
default = ["cargo-packager/rustls-tls"]
native-tls = ["cargo-packager/native-tls"]
native-tls-vendored = ["cargo-packager/native-tls-vendored"]
